refoctor code and clean project

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
 }
-
 body {
   background-color: #34495e;
   color: #fff;
@@ -13,11 +12,9 @@ body {
   margin: 0;
   overflow: hidden;
 }
-
 h1 {
   margin: 20px 0 0;
 }
-
 .game-container {
   padding: 20px 30px;
   position: relative;
@@ -32,11 +29,9 @@ h1 {
   stroke-width: 4px;
   stroke-linecap: round;
 }
-
 .figure-part {
   display: none;
 }
-
 .wrong-letters-container {
   position: absolute;
   top: 20px;
@@ -45,15 +40,12 @@ h1 {
   flex-direction: column;
   text-align: right;
 }
-
 .wrong-letters-container p {
   margin: 0 0 5px;
 }
-
 .wrong-letters-container span {
   font-size: 24px;
 }
-
 .word {
   display: flex;
   position: absolute;
@@ -61,20 +53,19 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
 }
-
-.letter {
+.letter{
   border-bottom: 3px solid #2980b9;
   display: inline-flex;
   font-size: 30px;
   align-items: center;
   justify-content: center;
-  margin: 0 3px;
+  margin: 0 3px ;
   height: 50px;
   width: 20px;
 }
 
-.popup-container {
-  background-color: rgba(0, 0, 0, 0.3);
+.popup-container{
+  background-color: rgba(0,0,0,0.3);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -84,16 +75,16 @@ h1 {
   display: none;
   align-items: center;
   justify-content: center;
+
 }
 
-.popup {
+.popup{
   background: #2980b9;
   border-radius: 5px;
-  box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 10px 3px rgba(0,0,0,0.1);
   padding: 20px;
   text-align: center;
 }
-
 .popup button {
   cursor: pointer;
   background-color: #fff;
@@ -103,24 +94,21 @@ h1 {
   padding: 12px 20px;
   font-size: 16px;
 }
-
 .popup button:active {
   transform: scale(0.98);
 }
-
 .popup button:focus {
-  outline: 0;
+  outline:  0;
 }
 
 .notification-container {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0,0,0,0.3);
   border-radius: 10px 10px 0 0;
-  padding: 15px 20px;
+  padding: 15px 20px ;
   position: absolute;
   bottom: -50px;
   transition: transform 0.3s ease-in-out;
 }
-
 .notification-container p {
   margin: 0;
 }
@@ -128,3 +116,5 @@ h1 {
 .notification-container.show {
   transform: translateY(-50px);
 }
+
+
